<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/str_updatepasswd"
        android:textColor="@color/title_color"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:background="@drawable/login_bg"
        android:hint="@string/str_oldpasswd"
        android:inputType="textWebPassword"
        android:padding="10dp"
        android:singleLine="true" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:background="@drawable/login_bg"
        android:hint="@string/str_newpasswd"
        android:inputType="textWebPassword"
        android:padding="10dp"
        android:singleLine="true" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:background="@drawable/login_bg"
        android:hint="@string/str_renewpasswd"
        android:inputType="textWebPassword"
        android:padding="10dp"
        android:singleLine="true" />

    <Button
        android:id="@+id/btnupdate"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/search_bg"
        android:text="@string/str_update_passwd"
        android:textColor="@android:color/white"
        android:textSize="18dp"
        android:textStyle="bold" />

</LinearLayout>
