<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center|left"
        android:orientation="vertical"
        android:padding="15dp"
        android:weightSum="1">

        <Button
            android:id="@+id/btnDiscovery"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/search_bg"
            android:text="@string/btn_discovery"
            android:textColor="@android:color/white"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtTarget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/title_target"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/edtTarget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:hint="Printer Address" />

        <TextView
            android:id="@+id/txtModel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/title_printerseries"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

        <Spinner
            android:id="@+id/spnModel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:gravity="left" />

        <TextView
            android:id="@+id/txtLang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/title_lang"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

        <Spinner
            android:id="@+id/spnLang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="left" />

        <Button
            android:id="@+id/btnSampleReceipt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/btn_samplereceipt"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnSampleCoupon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_samplecoupon"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_printcount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Printing Count"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_marginLeft="5dp"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/radio_one"
                    android:layout_marginLeft="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1"
                    android:checked="true" />

                <RadioButton
                    android:id="@+id/radio_two"
                    android:layout_marginLeft="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2" />

            </RadioGroup>

        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_warnings"
            android:visibility="gone"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

        <EditText
            android:visibility="gone"
            android:id="@+id/edtWarnings"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:enabled="false"
            android:focusable="false"
            android:inputType="none" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/search_bg"
            android:text="Save"
            android:textColor="@android:color/white"
            android:textSize="18dp"
            android:textStyle="bold"
            android:visibility="visible" />

    </LinearLayout>

</ScrollView>
